Created a seed file, and the app is interacting successfully with the database.

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,5 +7,9 @@ Ralph's Cupcake
 {% block content %}
 
 <h1 class="text-white">Ralph's Cupcake App</h1>
-
+{% for cupcake in cupcakes %}
+<p>Name: {{cupcake.flavor.capitalize()}}<br>
+<img src="{{cupcake.image}}" alt="Yummy" width="150">
+<br></p>
+{% endfor %}
 {% endblock %}
