Created a route for API to get all cupcakes, and added a link on the home page.

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,9 +7,7 @@ Ralph's Cupcake
 {% block content %}
 
 <h1 class="text-white">Ralph's Cupcake App</h1>
-{% for cupcake in cupcakes %}
-<p>Name: {{cupcake.flavor.capitalize()}}<br>
-<img src="{{cupcake.image}}" alt="Yummy" width="150">
-<br></p>
-{% endfor %}
+<h3>API Routes:</h3>
+<p><a href="/api/cupcakes"><span class = "btn btn-success">/api/cupcakes></span></a> Get data about all cupcakes (JSON format)</p>
+
 {% endblock %}
