Added an API route for individual cupcakes.

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,5 +9,6 @@ Ralph's Cupcake
 <h1 class="text-white">Ralph's Cupcake App</h1>
 <h3>API Routes:</h3>
 <p><a href="/api/cupcakes"><span class = "btn btn-success">/api/cupcakes></span></a> Get data about all cupcakes (JSON format)</p>
+<p><a href="/api/cupcakes/1"><span class = "btn btn-success">/api/cupcakes/id</id>></span></a> Get data about particular cupcake (JSON format)</p>
 
 {% endblock %}
