--- a/templates/base.html
+++ b/templates/base.html
@@ -12,5 +12,8 @@
     
     {% endblock %}
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="static/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
