--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Ralph's Cupcake 
+Ralph's Cupcake Page
 {% endblock %}
 
 {% block content %}
@@ -10,5 +10,36 @@ Ralph's Cupcake
 <h3>API Routes:</h3>
 <p><a href="/api/cupcakes"><span class = "btn btn-success">/api/cupcakes></span></a> Get data about all cupcakes (JSON format)</p>
 <p><a href="/api/cupcakes/1"><span class = "btn btn-success">/api/cupcakes/id</id>></span></a> Get data about particular cupcake (JSON format)</p>
+
+<table table table-bordered>
+    <thead>
+      <tr>
+        <th>Flavor</th>
+        <th>Size</th>
+        <th>Rating</th>
+        <th>Image</th>
+      </tr>
+    </thead>
+    <tbody id="body">
+ 
+    </tbody>
+  </table>
+
+    <h2>Add a Cupcake</h2>
+    <div class="form-control">
+
+  <form action="/" methods="post">
+    {{ form.hidden_tag() }}
+    {% for field in form 
+      if field.widget.input_type != 'hidden' %} 
+    <p>
+      {{field.label}}
+      {{field}}
+      </p>
+      {% endfor %}
+    </p>
+    <button type="submit" class="btn btn-success">Add Cupcake</button>
+  </form>
+  </div>
 
 {% endblock %}
